Enhance Jest configuration and test scripts: enable open handles detection, adjust test command, and update coverage report timestamps

--- a/__coverage__/lcov-report/template/index.ts.html
+++ b/__coverage__/lcov-report/template/index.ts.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Code coverage report for utils/decorators.ts</title>
+    <title>Code coverage report for template/index.ts</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../prettify.css" />
     <link rel="stylesheet" href="../base.css" />
@@ -19,34 +19,34 @@
 <body>
 <div class='wrapper'>
     <div class='pad1'>
-        <h1><a href="../index.html">All files</a> / <a href="index.html">utils</a> decorators.ts</h1>
+        <h1><a href="../index.html">All files</a> / <a href="index.html">template</a> index.ts</h1>
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>26/26</span>
+                <span class='fraction'>12/12</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">80% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>4/5</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>2/2</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>26/26</span>
+                <span class='fraction'>12/12</span>
             </div>
         
             
@@ -75,20 +75,7 @@
 <a name='L10'></a><a href='#L10'>10</a>
 <a name='L11'></a><a href='#L11'>11</a>
 <a name='L12'></a><a href='#L12'>12</a>
-<a name='L13'></a><a href='#L13'>13</a>
-<a name='L14'></a><a href='#L14'>14</a>
-<a name='L15'></a><a href='#L15'>15</a>
-<a name='L16'></a><a href='#L16'>16</a>
-<a name='L17'></a><a href='#L17'>17</a>
-<a name='L18'></a><a href='#L18'>18</a>
-<a name='L19'></a><a href='#L19'>19</a>
-<a name='L20'></a><a href='#L20'>20</a>
-<a name='L21'></a><a href='#L21'>21</a>
-<a name='L22'></a><a href='#L22'>22</a>
-<a name='L23'></a><a href='#L23'>23</a>
-<a name='L24'></a><a href='#L24'>24</a>
-<a name='L25'></a><a href='#L25'>25</a>
-<a name='L26'></a><a href='#L26'>26</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L13'></a><a href='#L13'>13</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -97,48 +84,22 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">3x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { Checks } from "./checks";
+<span class="cline-any cline-neutral">&nbsp;</span></td><td class="text"><pre class="prettyprint lang-js">class DataMap extends Map&lt;string, string | number | boolean | undefined | string[]&gt; {}
+type DataMapJSON = {[key: string]: string | number | boolean | string[] | undefined}
 &nbsp;
-/**
- * Decorator to check if the input is not empty
- */
-function IsNotEmpty(target: any, propertyKey: string, descriptor: PropertyDescriptor = {}): PropertyDescriptor {
-    const originalMethod = descriptor.value;
+export {
+    DataMap,
+    DataMapJSON
+};
 &nbsp;
-    descriptor.value = function (...args: any[]) {
-        // console.log(`${target.name}:${propertyKey}:input is: ${args}`);
-        // if (args === undefined || args === null || args.length === 0 || Checks.isEmpty(args) === true) {
-        //     // console.log(`${target.name}:${propertyKey}:input cannot be empty.`);
-        //     throw new Error(`${target.name}:${propertyKey}:input cannot be empty.`);
-        // }
-        if (Checks.hasEmpties(...args) === true) {
-            // console.log(`${target.name}:${propertyKey}:input ${args.toString()} cannot be empty.`);
-            throw new Error(`${target.name}:${propertyKey}:input cannot be empty.`);
-        }
-        return originalMethod.apply(this, args<span class="branch-0 cbranch-no" title="branch not covered" > || [])</span>;
-&nbsp;
-    };
-&nbsp;
-    return descriptor;
-}
-&nbsp;
-export { IsNotEmpty };</pre></td></tr></table></pre>
+export * from './load';
+export * from './manifest';
+export * from './meta';
+export * from './spec';
+&nbsp;</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
             </div><!-- /wrapper -->
