--- a/__coverage__/lcov-report/template/spec/v0/command.ts.html
+++ b/__coverage__/lcov-report/template/spec/v0/command.ts.html
@@ -23,30 +23,30 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">38.29% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>18/47</span>
+                <span class='fraction'>63/63</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">0% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>0/1</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">0% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>0/2</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">38.29% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>18/47</span>
+                <span class='fraction'>63/63</span>
             </div>
         
             
@@ -61,7 +61,7 @@
             </div>
         </template>
     </div>
-    <div class='status-line low'></div>
+    <div class='status-line high'></div>
     <pre><table class="coverage">
 <tr><td class="line-count quiet"><a name='L1'></a><a href='#L1'>1</a>
 <a name='L2'></a><a href='#L2'>2</a>
@@ -109,7 +109,23 @@
 <a name='L44'></a><a href='#L44'>44</a>
 <a name='L45'></a><a href='#L45'>45</a>
 <a name='L46'></a><a href='#L46'>46</a>
-<a name='L47'></a><a href='#L47'>47</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L47'></a><a href='#L47'>47</a>
+<a name='L48'></a><a href='#L48'>48</a>
+<a name='L49'></a><a href='#L49'>49</a>
+<a name='L50'></a><a href='#L50'>50</a>
+<a name='L51'></a><a href='#L51'>51</a>
+<a name='L52'></a><a href='#L52'>52</a>
+<a name='L53'></a><a href='#L53'>53</a>
+<a name='L54'></a><a href='#L54'>54</a>
+<a name='L55'></a><a href='#L55'>55</a>
+<a name='L56'></a><a href='#L56'>56</a>
+<a name='L57'></a><a href='#L57'>57</a>
+<a name='L58'></a><a href='#L58'>58</a>
+<a name='L59'></a><a href='#L59'>59</a>
+<a name='L60'></a><a href='#L60'>60</a>
+<a name='L61'></a><a href='#L61'>61</a>
+<a name='L62'></a><a href='#L62'>62</a>
+<a name='L63'></a><a href='#L63'>63</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -117,90 +133,122 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
-<span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { ArgumentSpec } from './arg';
-import { ParameterSpec } from './param';
-import { PropertySpec } from './property';
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { ConfigSpec } from './config';
 &nbsp;
 &nbsp;
-type TaskRunner&lt;R = any, T = any&gt;  = (instance: T | undefined, args?: Record&lt;string, any&gt;) =&gt; Promise&lt;R&gt;;
+/**
+ * TaksRunner runs a command
+ * @param instance - The instance of the command
+ * @param args - The arguments to the command
+ * @returns The result of the command
+ */
+type TaskRunner&lt;R = any, T = any&gt;  = ({instance, args}: {instance?: T | undefined, args?: Record&lt;string, any&gt;}) =&gt; Promise&lt;R&gt;;
 &nbsp;
-const defaultTaskRunner: TaskRunner&lt;any, any&gt; = <span class="fstat-no" title="function not covered" >async (instance, args) =&gt; {</span>
-<span class="cstat-no" title="statement not covered" >    return await instance(args);</span>
-<span class="cstat-no" title="statement not covered" >}</span>
 &nbsp;
-class CommandSpec&lt;R = any, T = any&gt;
-    extends PropertySpec
-<span class="cstat-no" title="statement not covered" ><span class="fstat-no" title="function not covered" ><span class="branch-0 cbranch-no" title="branch not covered" >{</span></span></span>
-<span class="cstat-no" title="statement not covered" >    public name: string;</span>
-<span class="cstat-no" title="statement not covered" >    public description: string;</span>
-<span class="cstat-no" title="statement not covered" >    public declare args: ArgumentSpec&lt;any&gt;[];</span>
-<span class="cstat-no" title="statement not covered" >    public declare params: ParameterSpec&lt;any&gt;[];</span>
-<span class="cstat-no" title="statement not covered" >    public taskRunner: TaskRunner&lt;R, T&gt;;</span>
-<span class="cstat-no" title="statement not covered" ></span>
-<span class="cstat-no" title="statement not covered" >    constructor({</span>
-<span class="cstat-no" title="statement not covered" >        name,</span>
-<span class="cstat-no" title="statement not covered" >        description,</span>
-<span class="cstat-no" title="statement not covered" >        args,</span>
-<span class="cstat-no" title="statement not covered" >        params,</span>
-<span class="cstat-no" title="statement not covered" >        taskRunner = defaultTaskRunner</span>
-<span class="cstat-no" title="statement not covered" >    }: {</span>
-<span class="cstat-no" title="statement not covered" >        name: string;</span>
-<span class="cstat-no" title="statement not covered" >        description: string;</span>
-<span class="cstat-no" title="statement not covered" >        args: ArgumentSpec&lt;any&gt;[],</span>
-<span class="cstat-no" title="statement not covered" >        params: ParameterSpec&lt;any&gt;[],</span>
-<span class="cstat-no" title="statement not covered" >        taskRunner: TaskRunner;</span>
-<span class="cstat-no" title="statement not covered" >    }) {</span>
-<span class="cstat-no" title="statement not covered" >        super({args, params});</span>
-<span class="cstat-no" title="statement not covered" ></span>
-<span class="cstat-no" title="statement not covered" >        this.name = name;</span>
-<span class="cstat-no" title="statement not covered" >        this.description = description;</span>
-<span class="cstat-no" title="statement not covered" >        this.taskRunner = taskRunner;</span>
-<span class="cstat-no" title="statement not covered" >    }</span>
-<span class="cstat-no" title="statement not covered" >}</span>
+/**
+ * Command Specification Template
+ */
+interface CommandSpec&lt;R = any, T = any&gt;
+    extends
+        ConfigSpec, // id, name, description, properties
+        Record&lt;'run', TaskRunner&lt;R, T&gt;&gt; {}
+&nbsp;
+&nbsp;
+/**
+ * Command Run Specification Template
+ */
+interface CommandRunSpec
+    extends
+        Record&lt;'commandName', string&gt;,
+        Record&lt;'jobId', string&gt;,
+        Record&lt;'instance', any&gt;,
+        Record&lt;"processId", string&gt;,
+        Record&lt;'args', Record&lt;string, any&gt;&gt; {}
+&nbsp;
+&nbsp;
+&nbsp;
+/**
+ * Command Result Specification Template
+ */
+interface CommandResultSpec&lt;R&gt;
+    extends
+        Record&lt;'run', CommandRunSpec&gt;,
+        Record&lt;'output', R&gt;,
+        Record&lt;'metrics', CommandResultMetricsSpec&gt; {}
+&nbsp;
+&nbsp;
+/**
+ * Command Result Metrics Specification Template
+ */
+interface CommandResultMetricsSpec
+    extends
+        Record&lt;'start', number&gt;,
+        Record&lt;'end', number&gt;,
+        Record&lt;'duration', number&gt;,
+        Record&lt;'bytesIn', number&gt;,
+        Record&lt;'bytesOut', number&gt; {}
 &nbsp;
 &nbsp;
 export {
-    CommandSpec,
-    type TaskRunner,
-    defaultTaskRunner
+    type CommandSpec,
+    type CommandRunSpec,
+    type CommandResultSpec,
+    type CommandResultMetricsSpec,
+    type TaskRunner
 };</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
@@ -208,7 +256,7 @@ export {
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2025-02-05T00:08:25.179Z
+                at 2025-02-23T08:35:46.325Z
             </div>
         <script src="../../../prettify.js"></script>
         <script>
