--- a/__coverage__/lcov-report/template/spec/v0/comms.ts.html
+++ b/__coverage__/lcov-report/template/spec/v0/comms.ts.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
 <head>
-    <title>Code coverage report for component/configurable.ts</title>
+    <title>Code coverage report for template/spec/v0/comms.ts</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../prettify.css" />
-    <link rel="stylesheet" href="../base.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="../favicon.png" />
+    <link rel="stylesheet" href="../../../prettify.css" />
+    <link rel="stylesheet" href="../../../base.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type='text/css'>
         .coverage-summary .sorter {
-            background-image: url(../sort-arrow-sprite.png);
+            background-image: url(../../../sort-arrow-sprite.png);
         }
     </style>
 </head>
@@ -19,34 +19,34 @@
 <body>
 <div class='wrapper'>
     <div class='pad1'>
-        <h1><a href="../index.html">All files</a> / <a href="index.html">component</a> configurable.ts</h1>
+        <h1><a href="../../../index.html">All files</a> / <a href="index.html">template/spec/v0</a> comms.ts</h1>
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>84/84</span>
+                <span class='fraction'>89/89</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">71.42% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>10/14</span>
+                <span class='fraction'>2/2</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>6/6</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>84/84</span>
+                <span class='fraction'>89/89</span>
             </div>
         
             
@@ -146,7 +146,13 @@
 <a name='L81'></a><a href='#L81'>81</a>
 <a name='L82'></a><a href='#L82'>82</a>
 <a name='L83'></a><a href='#L83'>83</a>
-<a name='L84'></a><a href='#L84'>84</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L84'></a><a href='#L84'>84</a>
+<a name='L85'></a><a href='#L85'>85</a>
+<a name='L86'></a><a href='#L86'>86</a>
+<a name='L87'></a><a href='#L87'>87</a>
+<a name='L88'></a><a href='#L88'>88</a>
+<a name='L89'></a><a href='#L89'>89</a>
+<a name='L90'></a><a href='#L90'>90</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -171,50 +177,6 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">20x</span>
-<span class="cline-any cline-yes">20x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">18x</span>
-<span class="cline-any cline-yes">18x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -229,90 +191,146 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { ConfigSpec, Metadata, MetadataEntry } from "@/template";
-import { Properties, PropertiesEntry } from "@component/properties";
-import { Component } from "@/component";
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-neutral">&nbsp;</span></td><td class="text"><pre class="prettyprint lang-js">import { Properties } from "@/component";
 &nbsp;
-&nbsp;
-interface Configuration&lt;T = any&gt;
-    extends
-        Pick&lt;ConfigSpec, "id" | "name" | "description"&gt;,
-        Partial&lt;Record&lt;"data", T&gt;&gt;,
-        Partial&lt;Record&lt;"metadata", Metadata&gt;&gt;,
-        Partial&lt;Record&lt;"properties", Properties&gt;&gt; {}
-&nbsp;
-&nbsp;
-interface ConfigurableEntry&lt;D&gt;
-    extends
-        Partial&lt;Pick&lt;ConfigSpec, "id" | "name" | "description"&gt;&gt;,
-        Partial&lt;Record&lt;"properties", PropertiesEntry | Properties&gt;&gt;,
-        Partial&lt;Record&lt;"data", D&gt;&gt;,
-        Partial&lt;Record&lt;"metadata", MetadataEntry&gt;&gt; {}
-&nbsp;
-&nbsp;
-class Configurable&lt;D extends Record&lt;string, any&gt; = any | undefined&gt;
-    extends Component&lt;D&gt;
-{
-    constructor({
-        id,
-        name,
-        description,
-        properties = new Properties(),
-        data = {} as D,
-        metadata = new Metadata()
-    }: ConfigurableEntry&lt;D&gt; = {}) {
-        super({
-            data: {
-                id,
-                name,
-                description,
-                properties: properties instanceof Properties ? properties : new Properties(properties),
-                ...data
-            },
-            meta: metadata instanceof Metadata ? metadata : new Metadata(metadata)
-        });
-&nbsp;
-        // console.log(`Configurable: ${JSON.stringify(this, null, 2)}`);
-&nbsp;
-        // this.data.properties.args.forEach(arg =&gt; Object.freeze(arg));
-        // this.data.properties.params.forEach(param =&gt; Object.freeze(param));
-        // Object.freeze(this.data);
-        // Object.freeze(this);
-        // Object.freeze(this.data.properties);
-        // Object.freeze(this.data.properties.args);
-        // Object.freeze(this.data.properties.params); 
-    }
-&nbsp;
-    public get id(): string {
-        return this.data.id !== undefined ? this.data.id <span class="branch-0 cbranch-no" title="branch not covered" >: "";</span>
-    }
-&nbsp;
-    public get name(): string {
-        return this.data.name !== undefined ? this.data.name <span class="branch-0 cbranch-no" title="branch not covered" >: "";</span>
-    }
-&nbsp;
-    public get description(): string {
-        return this.data.description !== undefined ? this.data.description <span class="branch-0 cbranch-no" title="branch not covered" >: "";</span>
-    }
-&nbsp;
-    public get properties(): Properties {
-        return this.data.properties !== undefined ? this.data.properties <span class="branch-0 cbranch-no" title="branch not covered" >: new Properties();</span>
-    }
-&nbsp;
-    public get metadata(): Metadata {
-        return this.meta;
-    }
-&nbsp;
-    
+enum MessageLevels {
+    Debug = "Debug",
+    Info = "Info",
+    Warn = "Warn",
+    Error = "Error"
 }
 &nbsp;
+type MessageLevel = keyof typeof MessageLevels;
+&nbsp;
+&nbsp;
+interface MessageSpec&lt;
+    L extends MessageLevel = MessageLevels.Info,
+    S extends MessageStatus = MessageStatuses.Success,
+    T = any | undefined
+&gt;
+    extends
+        Record&lt;'body', T&gt;,
+        Record&lt;'level', L&gt;,
+        Record&lt;"status", S&gt;,
+        Record&lt;"properties", Properties&gt;,
+        Record&lt;"timestamp", Date&gt; {}
+&nbsp;
+&nbsp;
+const MessageStatusCodes = {
+    Success: ['Success', 200],
+    Created: ['Created', 201],
+    Accepted: ['Accepted', 202],
+    NoContent: ['No Content', 204],
+    BadRequest: ['Bad Request', 400],
+    Unauthorized: ['Unauthorized', 401],
+    Forbidden: ['Forbidden', 403],
+    NotFound: ['Not Found', 404],
+    MethodNotAllowed: ['Method Not Allowed', 405],
+    NotAcceptable: ['Not Acceptable', 406],
+    RequestTimeout: ['Request Timeout', 408],
+    Conflict: ['Conflict', 409],
+    Gone: ['Gone', 410],
+    LengthRequired: ['Length Required', 411],
+    PreconditionFailed: ['Precondition Failed', 412],
+    PayloadTooLarge: ['Payload Too Large', 413],
+    UnsupportedMediaType: ['Unsupported Media Type', 415],
+    UnprocessableEntity: ['Unprocessable Entity', 422],
+    TooManyRequests: ['Too Many Requests', 429],
+    InternalServerError: ['Internal Server Error', 500],
+    NotImplemented: ['Not Implemented', 501],
+    BadGateway: ['Bad Gateway', 502],
+    ServiceUnavailable: ['Service Unavailable', 503],
+    GatewayTimeout: ['Gateway Timeout', 504],
+}
+&nbsp;
+enum MessageStatuses {
+    Success = "Success",
+    Created = "Created",
+    Accepted = "Accepted",
+    NoContent = "NoContent",
+    BadRequest = "BadRequest",
+    Unauthorized = "Unauthorized",
+    Forbidden = "Forbidden",
+    NotFound = "NotFound",
+    MethodNotAllowed = "MethodNotAllowed",
+    NotAcceptable = "NotAcceptable",
+    RequestTimeout = "RequestTimeout",
+    Conflict = "Conflict",
+    Gone = "Gone",
+    LengthRequired = "LengthRequired",
+    PreconditionFailed = "PreconditionFailed",
+    PayloadTooLarge = "PayloadTooLarge",
+    UnsupportedMediaType = "UnsupportedMediaType",
+    UnprocessableEntity = "UnprocessableEntity",
+    TooManyRequests = "TooManyRequests",
+    InternalServerError = "InternalServerError",
+    NotImplemented = "NotImplemented",
+    BadGateway = "BadGateway",
+    ServiceUnavailable = "ServiceUnavailable",
+    GatewayTimeout = "GatewayTimeout"
+}
+&nbsp;
+type MessageStatus = keyof typeof MessageStatusCodes;
 &nbsp;
 &nbsp;
 export {
-    type Configuration,
-    type ConfigurableEntry,
-    Configurable
-};</pre></td></tr></table></pre>
+    MessageLevels,
+    type MessageLevel,
+    MessageStatuses,
+    type MessageStatus,
+    type MessageSpec
+}
+&nbsp;</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
             </div><!-- /wrapper -->
@@ -321,14 +339,14 @@ export {
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
                 at 2025-02-23T08:35:46.325Z
             </div>
-        <script src="../prettify.js"></script>
+        <script src="../../../prettify.js"></script>
         <script>
             window.onload = function () {
                 prettyPrint();
             };
         </script>
-        <script src="../sorter.js"></script>
-        <script src="../block-navigation.js"></script>
+        <script src="../../../sorter.js"></script>
+        <script src="../../../block-navigation.js"></script>
     </body>
 </html>
     
