--- a/__coverage__/lcov-report/template/spec/v0/process.ts.html
+++ b/__coverage__/lcov-report/template/spec/v0/process.ts.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
 <head>
-    <title>Code coverage report for template/meta/index.ts</title>
+    <title>Code coverage report for template/spec/v0/process.ts</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../prettify.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="../../favicon.png" />
+    <link rel="stylesheet" href="../../../prettify.css" />
+    <link rel="stylesheet" href="../../../base.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type='text/css'>
         .coverage-summary .sorter {
-            background-image: url(../../sort-arrow-sprite.png);
+            background-image: url(../../../sort-arrow-sprite.png);
         }
     </style>
 </head>
@@ -19,34 +19,34 @@
 <body>
 <div class='wrapper'>
     <div class='pad1'>
-        <h1><a href="../../index.html">All files</a> / <a href="index.html">template/meta</a> index.ts</h1>
+        <h1><a href="../../../index.html">All files</a> / <a href="index.html">template/spec/v0</a> process.ts</h1>
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>62/62</span>
+                <span class='fraction'>58/58</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>3/3</span>
+                <span class='fraction'>1/1</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>3/3</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>62/62</span>
+                <span class='fraction'>58/58</span>
             </div>
         
             
@@ -120,11 +120,7 @@
 <a name='L55'></a><a href='#L55'>55</a>
 <a name='L56'></a><a href='#L56'>56</a>
 <a name='L57'></a><a href='#L57'>57</a>
-<a name='L58'></a><a href='#L58'>58</a>
-<a name='L59'></a><a href='#L59'>59</a>
-<a name='L60'></a><a href='#L60'>60</a>
-<a name='L61'></a><a href='#L61'>61</a>
-<a name='L62'></a><a href='#L62'>62</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L58'></a><a href='#L58'>58</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -137,47 +133,6 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -185,68 +140,101 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">&nbsp;
-import { AnnotationEntry, Annotations } from "./annotation";
-import { Labels, type LabelEntry } from "./label";
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { ConfigSpec, ParameterSpec } from "@template/spec/v0/config";
+import { CommandRunSpec, CommandSpec } from "./command";
 &nbsp;
-interface MetadataEntry
-    extends
-        Partial&lt;Pick&lt;AnnotationEntry, 'createdBy' | 'hash'&gt;&gt;,
-        Partial&lt;Pick&lt;LabelEntry, 'id' | 'name' | 'description'&gt;&gt;,
-        Partial&lt;Record&lt;'annotations', object&gt;&gt;,
-        Partial&lt;Record&lt;'labels', object&gt;&gt;{}
+const ProcessConfigParameters: ParameterSpec[] = [
+    {
+        name: "initialize",
+        required: false,
+        description: "Initialize the process",
+        defaultValue: false
+    } as ParameterSpec&lt;boolean&gt;,
+    {
+        name: "initializer",
+        required: false,
+        description: "Initialization function",
+        defaultValue: undefined
+    } as ParameterSpec&lt;Function&gt;,
+    {
+        name: "initializeCommand",
+        required: false,
+        description: "Initialize command"
+    } as ParameterSpec&lt;CommandRunSpec&gt;,
+]
 &nbsp;
 &nbsp;
-class Metadata {
-    public name: string | undefined = undefined;
-    public description: string | undefined = undefined;
-    public annotations: Annotations = new Annotations();
-    public labels: Labels = new Labels();
-&nbsp;
-    constructor({
-        id = "not-tracked",
-        name = undefined,
-        description = undefined,
-        hash = "not-set",
-        createdBy = "unknown",
-        annotations = {},
-        labels = {}
-    }: MetadataEntry = {}) {
-        this.name = name;
-        this.description = description;
-        this.annotations = new Annotations({
-            createdBy,
-            hash,
-            ...annotations
-        })
-        this.labels = new Labels({
-            id,
-            ...labels
-        })
-    }
-&nbsp;
-    public toJSON(): {
-        name: string | undefined,
-        description: string | undefined,
-        annotations: AnnotationEntry,
-        labels: LabelEntry
-    } {
-        return {
-            name: this.name,
-            description: this.description,
-            annotations: this.annotations.toJSON(),
-            labels: this.labels.toJSON()
-        }
-    }
+enum ProcessStatuses {
+    New = 'New',
+    Ready = 'Ready',
+    Initializing = 'Initializing',
+    InitializationError = 'InitializationError',
+    Initialized = 'Initialized',
+    Idle = 'Idle',
+    Running = 'Running',
+    Stopped = 'Stopped',
+    Paused = 'Paused',
+    Error = 'Error',
+    Completed = 'Completed',
+    CommandNotFound = 'CommandNotFound',
+    Unknown = 'Unknown'
 }
 &nbsp;
-export {
-    type MetadataEntry,
-    Metadata
-};
 &nbsp;
-export * from "./annotation";
-export * from "./label";</pre></td></tr></table></pre>
+type ProcessStatus = keyof typeof ProcessStatuses;
+&nbsp;
+&nbsp;
+interface ProcessSpec
+    extends
+        ConfigSpec,  // id, name, description, properties
+        Record&lt;"commands", CommandSpec[]&gt;,
+        Record&lt;"status", ProcessStatus&gt; {}
+&nbsp;
+&nbsp;
+&nbsp;
+export {
+    ProcessConfigParameters,
+    ProcessStatuses,
+    type ProcessStatus,
+    type ProcessSpec
+};</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
             </div><!-- /wrapper -->
@@ -255,14 +243,14 @@ export * from "./label";</pre></td></tr></table></pre>
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
                 at 2025-02-23T08:35:46.325Z
             </div>
-        <script src="../../prettify.js"></script>
+        <script src="../../../prettify.js"></script>
         <script>
             window.onload = function () {
                 prettyPrint();
             };
         </script>
-        <script src="../../sorter.js"></script>
-        <script src="../../block-navigation.js"></script>
+        <script src="../../../sorter.js"></script>
+        <script src="../../../block-navigation.js"></script>
     </body>
 </html>
     
