--- a/__coverage__/lcov-report/component/index.html
+++ b/__coverage__/lcov-report/component/index.html
@@ -23,30 +23,30 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">80.72% </span>
+                <span class="strong">85.01% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>448/555</span>
+                <span class='fraction'>874/1028</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">82.35% </span>
+                <span class="strong">69.46% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>56/68</span>
+                <span class='fraction'>91/131</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">67.44% </span>
+                <span class="strong">89.47% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>29/43</span>
+                <span class='fraction'>51/57</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">80.72% </span>
+                <span class="strong">85.01% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>448/555</span>
+                <span class='fraction'>874/1028</span>
             </div>
         
             
@@ -79,63 +79,78 @@
 </tr>
 </thead>
 <tbody><tr>
-	<td class="file medium" data-value="configurable.ts"><a href="configurable.ts.html">configurable.ts</a></td>
-	<td data-value="55" class="pic medium">
-	<div class="chart"><div class="cover-fill" style="width: 55%"></div><div class="cover-empty" style="width: 45%"></div></div>
+	<td class="file high" data-value="configurable.ts"><a href="configurable.ts.html">configurable.ts</a></td>
+	<td data-value="100" class="pic high">
+	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
-	<td data-value="55" class="pct medium">55%</td>
-	<td data-value="80" class="abs medium">44/80</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="0" class="abs high">0/0</td>
-	<td data-value="0" class="pct low">0%</td>
-	<td data-value="6" class="abs low">0/6</td>
-	<td data-value="55" class="pct medium">55%</td>
-	<td data-value="80" class="abs medium">44/80</td>
+	<td data-value="84" class="abs high">84/84</td>
+	<td data-value="71.42" class="pct medium">71.42%</td>
+	<td data-value="14" class="abs medium">10/14</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="6" class="abs high">6/6</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="84" class="abs high">84/84</td>
 	</tr>
 
 <tr>
-	<td class="file medium" data-value="identity.ts"><a href="identity.ts.html">identity.ts</a></td>
-	<td data-value="62.29" class="pic medium">
-	<div class="chart"><div class="cover-fill" style="width: 62%"></div><div class="cover-empty" style="width: 38%"></div></div>
+	<td class="file high" data-value="identity.ts"><a href="identity.ts.html">identity.ts</a></td>
+	<td data-value="94.26" class="pic high">
+	<div class="chart"><div class="cover-fill" style="width: 94%"></div><div class="cover-empty" style="width: 6%"></div></div>
 	</td>
-	<td data-value="62.29" class="pct medium">62.29%</td>
-	<td data-value="122" class="abs medium">76/122</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="7" class="abs high">7/7</td>
-	<td data-value="46.66" class="pct low">46.66%</td>
-	<td data-value="15" class="abs low">7/15</td>
-	<td data-value="62.29" class="pct medium">62.29%</td>
-	<td data-value="122" class="abs medium">76/122</td>
+	<td data-value="94.26" class="pct high">94.26%</td>
+	<td data-value="157" class="abs high">148/157</td>
+	<td data-value="79.16" class="pct medium">79.16%</td>
+	<td data-value="24" class="abs medium">19/24</td>
+	<td data-value="93.75" class="pct high">93.75%</td>
+	<td data-value="16" class="abs high">15/16</td>
+	<td data-value="94.26" class="pct high">94.26%</td>
+	<td data-value="157" class="abs high">148/157</td>
 	</tr>
 
 <tr>
 	<td class="file high" data-value="index.ts"><a href="index.ts.html">index.ts</a></td>
-	<td data-value="94.31" class="pic high">
-	<div class="chart"><div class="cover-fill" style="width: 94%"></div><div class="cover-empty" style="width: 6%"></div></div>
+	<td data-value="91.46" class="pic high">
+	<div class="chart"><div class="cover-fill" style="width: 91%"></div><div class="cover-empty" style="width: 9%"></div></div>
 	</td>
-	<td data-value="94.31" class="pct high">94.31%</td>
-	<td data-value="88" class="abs high">83/88</td>
+	<td data-value="91.46" class="pct high">91.46%</td>
+	<td data-value="82" class="abs high">75/82</td>
 	<td data-value="83.33" class="pct high">83.33%</td>
 	<td data-value="12" class="abs high">10/12</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="4" class="abs high">4/4</td>
-	<td data-value="94.31" class="pct high">94.31%</td>
-	<td data-value="88" class="abs high">83/88</td>
+	<td data-value="80" class="pct high">80%</td>
+	<td data-value="5" class="abs high">4/5</td>
+	<td data-value="91.46" class="pct high">91.46%</td>
+	<td data-value="82" class="abs high">75/82</td>
 	</tr>
 
 <tr>
-	<td class="file high" data-value="properties.ts"><a href="properties.ts.html">properties.ts</a></td>
-	<td data-value="92.45" class="pic high">
-	<div class="chart"><div class="cover-fill" style="width: 92%"></div><div class="cover-empty" style="width: 8%"></div></div>
+	<td class="file high" data-value="processes.ts"><a href="processes.ts.html">processes.ts</a></td>
+	<td data-value="82.33" class="pic high">
+	<div class="chart"><div class="cover-fill" style="width: 82%"></div><div class="cover-empty" style="width: 18%"></div></div>
 	</td>
-	<td data-value="92.45" class="pct high">92.45%</td>
-	<td data-value="265" class="abs high">245/265</td>
-	<td data-value="79.59" class="pct medium">79.59%</td>
-	<td data-value="49" class="abs medium">39/49</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="18" class="abs high">18/18</td>
-	<td data-value="92.45" class="pct high">92.45%</td>
-	<td data-value="265" class="abs high">245/265</td>
+	<td data-value="82.33" class="pct high">82.33%</td>
+	<td data-value="402" class="abs high">331/402</td>
+	<td data-value="73.07" class="pct medium">73.07%</td>
+	<td data-value="26" class="abs medium">19/26</td>
+	<td data-value="91.66" class="pct high">91.66%</td>
+	<td data-value="12" class="abs high">11/12</td>
+	<td data-value="82.33" class="pct high">82.33%</td>
+	<td data-value="402" class="abs high">331/402</td>
+	</tr>
+
+<tr>
+	<td class="file medium" data-value="properties.ts"><a href="properties.ts.html">properties.ts</a></td>
+	<td data-value="77.88" class="pic medium">
+	<div class="chart"><div class="cover-fill" style="width: 77%"></div><div class="cover-empty" style="width: 23%"></div></div>
+	</td>
+	<td data-value="77.88" class="pct medium">77.88%</td>
+	<td data-value="303" class="abs medium">236/303</td>
+	<td data-value="60" class="pct medium">60%</td>
+	<td data-value="55" class="abs medium">33/55</td>
+	<td data-value="83.33" class="pct high">83.33%</td>
+	<td data-value="18" class="abs high">15/18</td>
+	<td data-value="77.88" class="pct medium">77.88%</td>
+	<td data-value="303" class="abs medium">236/303</td>
 	</tr>
 
 </tbody>
@@ -146,7 +161,7 @@
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2025-02-19T07:59:13.931Z
+                at 2025-02-23T08:35:46.325Z
             </div>
         <script src="../prettify.js"></script>
         <script>
