--- a/__coverage__/lcov-report/component/index.ts.html
+++ b/__coverage__/lcov-report/component/index.ts.html
@@ -23,9 +23,9 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">94.31% </span>
+                <span class="strong">91.46% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>83/88</span>
+                <span class='fraction'>75/82</span>
             </div>
         
             
@@ -37,16 +37,16 @@
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">100% </span>
+                <span class="strong">80% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>4/4</span>
+                <span class='fraction'>4/5</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">94.31% </span>
+                <span class="strong">91.46% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>83/88</span>
+                <span class='fraction'>75/82</span>
             </div>
         
             
@@ -144,13 +144,7 @@
 <a name='L79'></a><a href='#L79'>79</a>
 <a name='L80'></a><a href='#L80'>80</a>
 <a name='L81'></a><a href='#L81'>81</a>
-<a name='L82'></a><a href='#L82'>82</a>
-<a name='L83'></a><a href='#L83'>83</a>
-<a name='L84'></a><a href='#L84'>84</a>
-<a name='L85'></a><a href='#L85'>85</a>
-<a name='L86'></a><a href='#L86'>86</a>
-<a name='L87'></a><a href='#L87'>87</a>
-<a name='L88'></a><a href='#L88'>88</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L82'></a><a href='#L82'>82</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -168,13 +162,6 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">5x</span>
@@ -200,8 +187,8 @@
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
-<span class="cline-any cline-yes">5x</span>
+<span class="cline-any cline-no">&nbsp;</span>
+<span class="cline-any cline-no">&nbsp;</span>
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">5x</span>
 <span class="cline-any cline-yes">8x</span>
@@ -229,6 +216,7 @@
 <span class="cline-any cline-yes">3x</span>
 <span class="cline-any cline-yes">3x</span>
 <span class="cline-any cline-yes">5x</span>
+<span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -242,33 +230,26 @@ import { CryptoUtils } from "@utils/crypto";
 import { Metadata, MetadataEntry } from "@template/meta";
 &nbsp;
 &nbsp;
-enum ComponentType {
-    QUEUE = "queue",
-    RUNNER = "runner",
-    MANAGER = "manager",
-    MESSAGE = "message",
-    CONFIGMAP = "configmap",
-    SECRET = "secret"
+enum ComponentTypes {
+    QUEUE = "QUEUE",
+&nbsp;
 }
 &nbsp;
-interface ComponentEntry&lt;T = any&gt;
+interface ComponentEntry&lt;D&gt;
     extends
-        Record&lt;"data", T&gt;,
+        Record&lt;"data", D&gt;,
         Partial&lt;Record&lt;"meta", MetadataEntry&gt;&gt; {}
 &nbsp;
 /**
  */
-class Component&lt;T&gt; {
-    public readonly data: T;
-    public readonly meta: Metadata;
+class Component&lt;D = undefined&gt; {
+    public data: D;
+    public meta: Metadata;
 &nbsp;
     constructor({
         data,
         meta
-    }: {
-        data: T,
-        meta?: MetadataEntry | Metadata
-    }) {
+    }: ComponentEntry&lt;D&gt;) {
         this.data = data
         if (meta instanceof Metadata) <span class="branch-0 cbranch-no" title="branch not covered" >{</span>
 <span class="cstat-no" title="statement not covered" >            this.meta = meta;</span>
@@ -286,9 +267,9 @@ class Component&lt;T&gt; {
 <span class="cstat-no" title="statement not covered" >        }</span>
     }
 &nbsp;
-    // private setMetadata(meta: MetadataEntry): void {
-    //     this.meta = new Metadata(meta);
-    // }
+    public <span class="fstat-no" title="function not covered" >getDataValue&lt;K extends keyof D&gt;(key: K): D[K] {</span>
+<span class="cstat-no" title="statement not covered" >        return this.data[key];</span>
+<span class="cstat-no" title="statement not covered" >    }</span>
 &nbsp;
     public get metadata(): Metadata {
         return this.meta;
@@ -320,6 +301,7 @@ class Component&lt;T&gt; {
 &nbsp;
 &nbsp;
 export {
+    type ComponentEntry,
     Component
 };
 &nbsp;
@@ -331,7 +313,7 @@ export * from './properties';</pre></td></tr></table></pre>
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2025-02-19T07:59:13.931Z
+                at 2025-02-23T08:35:46.325Z
             </div>
         <script src="../prettify.js"></script>
         <script>
