--- a/__coverage__/lcov-report/template/index.html
+++ b/__coverage__/lcov-report/template/index.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
 <head>
-    <title>Code coverage report for template/meta</title>
+    <title>Code coverage report for template</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../prettify.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="../../favicon.png" />
+    <link rel="stylesheet" href="../prettify.css" />
+    <link rel="stylesheet" href="../base.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type='text/css'>
         .coverage-summary .sorter {
-            background-image: url(../../sort-arrow-sprite.png);
+            background-image: url(../sort-arrow-sprite.png);
         }
     </style>
 </head>
@@ -19,34 +19,34 @@
 <body>
 <div class='wrapper'>
     <div class='pad1'>
-        <h1><a href="../../index.html">All files</a> template/meta</h1>
+        <h1><a href="../index.html">All files</a> template</h1>
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">94.88% </span>
+                <span class="strong">83.14% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>167/176</span>
+                <span class='fraction'>74/89</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>12/12</span>
+                <span class='fraction'>2/2</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">90% </span>
+                <span class="strong">0% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>9/10</span>
+                <span class='fraction'>0/2</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">94.88% </span>
+                <span class="strong">83.14% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>167/176</span>
+                <span class='fraction'>74/89</span>
             </div>
         
             
@@ -79,48 +79,48 @@
 </tr>
 </thead>
 <tbody><tr>
-	<td class="file high" data-value="annotation.ts"><a href="annotation.ts.html">annotation.ts</a></td>
-	<td data-value="88.88" class="pic high">
-	<div class="chart"><div class="cover-fill" style="width: 88%"></div><div class="cover-empty" style="width: 12%"></div></div>
-	</td>
-	<td data-value="88.88" class="pct high">88.88%</td>
-	<td data-value="81" class="abs high">72/81</td>
-	<td data-value="100" class="pct high">100%</td>
-	<td data-value="7" class="abs high">7/7</td>
-	<td data-value="80" class="pct high">80%</td>
-	<td data-value="5" class="abs high">4/5</td>
-	<td data-value="88.88" class="pct high">88.88%</td>
-	<td data-value="81" class="abs high">72/81</td>
-	</tr>
-
-<tr>
 	<td class="file high" data-value="index.ts"><a href="index.ts.html">index.ts</a></td>
 	<td data-value="100" class="pic high">
 	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="62" class="abs high">62/62</td>
+	<td data-value="12" class="abs high">12/12</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="3" class="abs high">3/3</td>
+	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="3" class="abs high">3/3</td>
+	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="62" class="abs high">62/62</td>
+	<td data-value="12" class="abs high">12/12</td>
 	</tr>
 
 <tr>
-	<td class="file high" data-value="label.ts"><a href="label.ts.html">label.ts</a></td>
+	<td class="file low" data-value="load.ts"><a href="load.ts.html">load.ts</a></td>
+	<td data-value="46.42" class="pic low">
+	<div class="chart"><div class="cover-fill" style="width: 46%"></div><div class="cover-empty" style="width: 54%"></div></div>
+	</td>
+	<td data-value="46.42" class="pct low">46.42%</td>
+	<td data-value="28" class="abs low">13/28</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="0" class="pct low">0%</td>
+	<td data-value="2" class="abs low">0/2</td>
+	<td data-value="46.42" class="pct low">46.42%</td>
+	<td data-value="28" class="abs low">13/28</td>
+	</tr>
+
+<tr>
+	<td class="file high" data-value="manifest.ts"><a href="manifest.ts.html">manifest.ts</a></td>
 	<td data-value="100" class="pic high">
 	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="33" class="abs high">33/33</td>
+	<td data-value="49" class="abs high">49/49</td>
 	<td data-value="100" class="pct high">100%</td>
 	<td data-value="2" class="abs high">2/2</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="2" class="abs high">2/2</td>
+	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="33" class="abs high">33/33</td>
+	<td data-value="49" class="abs high">49/49</td>
 	</tr>
 
 </tbody>
@@ -133,14 +133,14 @@
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
                 at 2025-02-23T08:35:46.325Z
             </div>
-        <script src="../../prettify.js"></script>
+        <script src="../prettify.js"></script>
         <script>
             window.onload = function () {
                 prettyPrint();
             };
         </script>
-        <script src="../../sorter.js"></script>
-        <script src="../../block-navigation.js"></script>
+        <script src="../sorter.js"></script>
+        <script src="../block-navigation.js"></script>
     </body>
 </html>
     
