--- a/__coverage__/lcov-report/template/manifest.ts.html
+++ b/__coverage__/lcov-report/template/manifest.ts.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Code coverage report for component/configurable.ts</title>
+    <title>Code coverage report for template/manifest.ts</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../prettify.css" />
     <link rel="stylesheet" href="../base.css" />
@@ -19,34 +19,34 @@
 <body>
 <div class='wrapper'>
     <div class='pad1'>
-        <h1><a href="../index.html">All files</a> / <a href="index.html">component</a> configurable.ts</h1>
+        <h1><a href="../index.html">All files</a> / <a href="index.html">template</a> manifest.ts</h1>
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>84/84</span>
+                <span class='fraction'>49/49</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">71.42% </span>
+                <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>10/14</span>
+                <span class='fraction'>2/2</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>6/6</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>84/84</span>
+                <span class='fraction'>49/49</span>
             </div>
         
             
@@ -111,42 +111,7 @@
 <a name='L46'></a><a href='#L46'>46</a>
 <a name='L47'></a><a href='#L47'>47</a>
 <a name='L48'></a><a href='#L48'>48</a>
-<a name='L49'></a><a href='#L49'>49</a>
-<a name='L50'></a><a href='#L50'>50</a>
-<a name='L51'></a><a href='#L51'>51</a>
-<a name='L52'></a><a href='#L52'>52</a>
-<a name='L53'></a><a href='#L53'>53</a>
-<a name='L54'></a><a href='#L54'>54</a>
-<a name='L55'></a><a href='#L55'>55</a>
-<a name='L56'></a><a href='#L56'>56</a>
-<a name='L57'></a><a href='#L57'>57</a>
-<a name='L58'></a><a href='#L58'>58</a>
-<a name='L59'></a><a href='#L59'>59</a>
-<a name='L60'></a><a href='#L60'>60</a>
-<a name='L61'></a><a href='#L61'>61</a>
-<a name='L62'></a><a href='#L62'>62</a>
-<a name='L63'></a><a href='#L63'>63</a>
-<a name='L64'></a><a href='#L64'>64</a>
-<a name='L65'></a><a href='#L65'>65</a>
-<a name='L66'></a><a href='#L66'>66</a>
-<a name='L67'></a><a href='#L67'>67</a>
-<a name='L68'></a><a href='#L68'>68</a>
-<a name='L69'></a><a href='#L69'>69</a>
-<a name='L70'></a><a href='#L70'>70</a>
-<a name='L71'></a><a href='#L71'>71</a>
-<a name='L72'></a><a href='#L72'>72</a>
-<a name='L73'></a><a href='#L73'>73</a>
-<a name='L74'></a><a href='#L74'>74</a>
-<a name='L75'></a><a href='#L75'>75</a>
-<a name='L76'></a><a href='#L76'>76</a>
-<a name='L77'></a><a href='#L77'>77</a>
-<a name='L78'></a><a href='#L78'>78</a>
-<a name='L79'></a><a href='#L79'>79</a>
-<a name='L80'></a><a href='#L80'>80</a>
-<a name='L81'></a><a href='#L81'>81</a>
-<a name='L82'></a><a href='#L82'>82</a>
-<a name='L83'></a><a href='#L83'>83</a>
-<a name='L84'></a><a href='#L84'>84</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L49'></a><a href='#L49'>49</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -171,50 +136,6 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">22x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">20x</span>
-<span class="cline-any cline-yes">20x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">18x</span>
-<span class="cline-any cline-yes">18x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -229,89 +150,63 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { ConfigSpec, Metadata, MetadataEntry } from "@/template";
-import { Properties, PropertiesEntry } from "@component/properties";
-import { Component } from "@/component";
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { ArgumentSpec } from "@template/spec/";
+import { MetadataEntry } from "@/template/meta";
 &nbsp;
 &nbsp;
-interface Configuration&lt;T = any&gt;
-    extends
-        Pick&lt;ConfigSpec, "id" | "name" | "description"&gt;,
-        Partial&lt;Record&lt;"data", T&gt;&gt;,
-        Partial&lt;Record&lt;"metadata", Metadata&gt;&gt;,
-        Partial&lt;Record&lt;"properties", Properties&gt;&gt; {}
+enum ApiVersions {
+    v0 = "pocket/v0",
+    v1 = "pocket/v1"
+}
+&nbsp;
+type ApiVersion = keyof typeof ApiVersions;
+&nbsp;
+enum TemplateKinds {
+    Peer = "Peer",
+    Service = "Service",
+    Command = "Command",
+    Job = "Job",
+    Parameter = "Parameter",
+    Argument = "Argument",
+}
+&nbsp;
+type TemplateKind = keyof typeof TemplateKinds;
 &nbsp;
 &nbsp;
-interface ConfigurableEntry&lt;D&gt;
-    extends
-        Partial&lt;Pick&lt;ConfigSpec, "id" | "name" | "description"&gt;&gt;,
-        Partial&lt;Record&lt;"properties", PropertiesEntry | Properties&gt;&gt;,
-        Partial&lt;Record&lt;"data", D&gt;&gt;,
-        Partial&lt;Record&lt;"metadata", MetadataEntry&gt;&gt; {}
+&nbsp;
+// type Spec&lt;K extends TemplateKinds, T = any&gt; = K extends TemplateKinds.Peer ? PeerSpec : K extends TemplateKinds.Service ? ServiceSpec : K extends TemplateKinds.Command ? CommandSpec : K extends TemplateKinds.Job ? JobSpec : K extends TemplateKinds.Parameter ? ParameterSpec&lt;T&gt; : K extends TemplateKinds.Argument ? ArgumentSpec&lt;T&gt; : never;
+&nbsp;
+type Spec&lt;K extends TemplateKinds, T = any&gt; = K extends TemplateKinds.Argument ? ArgumentSpec&lt;T&gt; : never;
 &nbsp;
 &nbsp;
-class Configurable&lt;D extends Record&lt;string, any&gt; = any | undefined&gt;
-    extends Component&lt;D&gt;
-{
-    constructor({
-        id,
-        name,
-        description,
-        properties = new Properties(),
-        data = {} as D,
-        metadata = new Metadata()
-    }: ConfigurableEntry&lt;D&gt; = {}) {
-        super({
-            data: {
-                id,
-                name,
-                description,
-                properties: properties instanceof Properties ? properties : new Properties(properties),
-                ...data
-            },
-            meta: metadata instanceof Metadata ? metadata : new Metadata(metadata)
-        });
-&nbsp;
-        // console.log(`Configurable: ${JSON.stringify(this, null, 2)}`);
-&nbsp;
-        // this.data.properties.args.forEach(arg =&gt; Object.freeze(arg));
-        // this.data.properties.params.forEach(param =&gt; Object.freeze(param));
-        // Object.freeze(this.data);
-        // Object.freeze(this);
-        // Object.freeze(this.data.properties);
-        // Object.freeze(this.data.properties.args);
-        // Object.freeze(this.data.properties.params); 
-    }
-&nbsp;
-    public get id(): string {
-        return this.data.id !== undefined ? this.data.id <span class="branch-0 cbranch-no" title="branch not covered" >: "";</span>
-    }
-&nbsp;
-    public get name(): string {
-        return this.data.name !== undefined ? this.data.name <span class="branch-0 cbranch-no" title="branch not covered" >: "";</span>
-    }
-&nbsp;
-    public get description(): string {
-        return this.data.description !== undefined ? this.data.description <span class="branch-0 cbranch-no" title="branch not covered" >: "";</span>
-    }
-&nbsp;
-    public get properties(): Properties {
-        return this.data.properties !== undefined ? this.data.properties <span class="branch-0 cbranch-no" title="branch not covered" >: new Properties();</span>
-    }
-&nbsp;
-    public get metadata(): Metadata {
-        return this.meta;
-    }
-&nbsp;
-    
+interface Template&lt;
+    V extends ApiVersions = ApiVersions.v1,
+    K extends TemplateKinds = TemplateKinds.Peer,
+    T = any
+&gt; {
+    apiVersion: V;
+    kind: K;
+    metadata: MetadataEntry;
+    spec: Spec&lt;K, T&gt;;
 }
 &nbsp;
 &nbsp;
-&nbsp;
 export {
-    type Configuration,
-    type ConfigurableEntry,
-    Configurable
+    type ApiVersion,
+    ApiVersions,
+    type TemplateKind,
+    TemplateKinds,
+    Template,
+    type Spec
 };</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
