--- a/__coverage__/lcov-report/template/spec/v0/index.html
+++ b/__coverage__/lcov-report/template/spec/v0/index.html
@@ -23,30 +23,30 @@
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">76.25% </span>
+                <span class="strong">95.86% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>212/278</span>
+                <span class='fraction'>417/435</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">86.84% </span>
+                <span class="strong">75% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>33/38</span>
+                <span class='fraction'>3/4</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">68.42% </span>
+                <span class="strong">0% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>13/19</span>
+                <span class='fraction'>0/1</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
-                <span class="strong">76.25% </span>
+                <span class="strong">95.86% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>212/278</span>
+                <span class='fraction'>417/435</span>
             </div>
         
             
@@ -61,7 +61,7 @@
             </div>
         </template>
     </div>
-    <div class='status-line medium'></div>
+    <div class='status-line high'></div>
     <div class="pad1">
 <table class="coverage-summary">
 <thead>
@@ -79,33 +79,48 @@
 </tr>
 </thead>
 <tbody><tr>
-	<td class="file high" data-value="arg.ts"><a href="arg.ts.html">arg.ts</a></td>
+	<td class="file high" data-value="command.ts"><a href="command.ts.html">command.ts</a></td>
 	<td data-value="100" class="pic high">
 	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="43" class="abs high">43/43</td>
+	<td data-value="63" class="abs high">63/63</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="6" class="abs high">6/6</td>
+	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="3" class="abs high">3/3</td>
+	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="43" class="abs high">43/43</td>
+	<td data-value="63" class="abs high">63/63</td>
 	</tr>
 
 <tr>
-	<td class="file low" data-value="command.ts"><a href="command.ts.html">command.ts</a></td>
-	<td data-value="38.29" class="pic low">
-	<div class="chart"><div class="cover-fill" style="width: 38%"></div><div class="cover-empty" style="width: 62%"></div></div>
+	<td class="file high" data-value="comms.ts"><a href="comms.ts.html">comms.ts</a></td>
+	<td data-value="100" class="pic high">
+	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
-	<td data-value="38.29" class="pct low">38.29%</td>
-	<td data-value="47" class="abs low">18/47</td>
-	<td data-value="0" class="pct low">0%</td>
-	<td data-value="1" class="abs low">0/1</td>
-	<td data-value="0" class="pct low">0%</td>
-	<td data-value="2" class="abs low">0/2</td>
-	<td data-value="38.29" class="pct low">38.29%</td>
-	<td data-value="47" class="abs low">18/47</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="89" class="abs high">89/89</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="2" class="abs high">2/2</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="89" class="abs high">89/89</td>
+	</tr>
+
+<tr>
+	<td class="file high" data-value="config.ts"><a href="config.ts.html">config.ts</a></td>
+	<td data-value="100" class="pic high">
+	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
+	</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="55" class="abs high">55/55</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="55" class="abs high">55/55</td>
 	</tr>
 
 <tr>
@@ -114,43 +129,73 @@
 	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="4" class="abs high">4/4</td>
+	<td data-value="6" class="abs high">6/6</td>
 	<td data-value="100" class="pct high">100%</td>
 	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
 	<td data-value="0" class="abs high">0/0</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="4" class="abs high">4/4</td>
+	<td data-value="6" class="abs high">6/6</td>
 	</tr>
 
 <tr>
-	<td class="file high" data-value="param.ts"><a href="param.ts.html">param.ts</a></td>
-	<td data-value="93.24" class="pic high">
-	<div class="chart"><div class="cover-fill" style="width: 93%"></div><div class="cover-empty" style="width: 7%"></div></div>
+	<td class="file high" data-value="job.ts"><a href="job.ts.html">job.ts</a></td>
+	<td data-value="100" class="pic high">
+	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
 	</td>
-	<td data-value="93.24" class="pct high">93.24%</td>
-	<td data-value="74" class="abs high">69/74</td>
-	<td data-value="73.33" class="pct medium">73.33%</td>
-	<td data-value="15" class="abs medium">11/15</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="4" class="abs high">4/4</td>
-	<td data-value="93.24" class="pct high">93.24%</td>
-	<td data-value="74" class="abs high">69/74</td>
+	<td data-value="45" class="abs high">45/45</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="45" class="abs high">45/45</td>
 	</tr>
 
 <tr>
-	<td class="file medium" data-value="property.ts"><a href="property.ts.html">property.ts</a></td>
-	<td data-value="70.9" class="pic medium">
-	<div class="chart"><div class="cover-fill" style="width: 70%"></div><div class="cover-empty" style="width: 30%"></div></div>
+	<td class="file low" data-value="peer.ts"><a href="peer.ts.html">peer.ts</a></td>
+	<td data-value="28" class="pic low">
+	<div class="chart"><div class="cover-fill" style="width: 28%"></div><div class="cover-empty" style="width: 72%"></div></div>
 	</td>
-	<td data-value="70.9" class="pct medium">70.9%</td>
-	<td data-value="110" class="abs medium">78/110</td>
+	<td data-value="28" class="pct low">28%</td>
+	<td data-value="25" class="abs low">7/25</td>
+	<td data-value="0" class="pct low">0%</td>
+	<td data-value="1" class="abs low">0/1</td>
+	<td data-value="0" class="pct low">0%</td>
+	<td data-value="1" class="abs low">0/1</td>
+	<td data-value="28" class="pct low">28%</td>
+	<td data-value="25" class="abs low">7/25</td>
+	</tr>
+
+<tr>
+	<td class="file high" data-value="process.ts"><a href="process.ts.html">process.ts</a></td>
+	<td data-value="100" class="pic high">
+	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
+	</td>
 	<td data-value="100" class="pct high">100%</td>
-	<td data-value="16" class="abs high">16/16</td>
-	<td data-value="60" class="pct medium">60%</td>
-	<td data-value="10" class="abs medium">6/10</td>
-	<td data-value="70.9" class="pct medium">70.9%</td>
-	<td data-value="110" class="abs medium">78/110</td>
+	<td data-value="58" class="abs high">58/58</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="1" class="abs high">1/1</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="58" class="abs high">58/58</td>
+	</tr>
+
+<tr>
+	<td class="file high" data-value="service.ts"><a href="service.ts.html">service.ts</a></td>
+	<td data-value="100" class="pic high">
+	<div class="chart"><div class="cover-fill cover-full" style="width: 100%"></div><div class="cover-empty" style="width: 0%"></div></div>
+	</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="94" class="abs high">94/94</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="0" class="abs high">0/0</td>
+	<td data-value="100" class="pct high">100%</td>
+	<td data-value="94" class="abs high">94/94</td>
 	</tr>
 
 </tbody>
@@ -161,7 +206,7 @@
             <div class='footer quiet pad2 space-top1 center small'>
                 Code coverage generated by
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
-                at 2025-02-05T00:08:25.179Z
+                at 2025-02-23T08:35:46.325Z
             </div>
         <script src="../../../prettify.js"></script>
         <script>
