--- a/__coverage__/lcov-report/template/spec/v0/job.ts.html
+++ b/__coverage__/lcov-report/template/spec/v0/job.ts.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
 <head>
-    <title>Code coverage report for template/meta/label.ts</title>
+    <title>Code coverage report for template/spec/v0/job.ts</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../../prettify.css" />
-    <link rel="stylesheet" href="../../base.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="../../favicon.png" />
+    <link rel="stylesheet" href="../../../prettify.css" />
+    <link rel="stylesheet" href="../../../base.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="../../../favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type='text/css'>
         .coverage-summary .sorter {
-            background-image: url(../../sort-arrow-sprite.png);
+            background-image: url(../../../sort-arrow-sprite.png);
         }
     </style>
 </head>
@@ -19,34 +19,34 @@
 <body>
 <div class='wrapper'>
     <div class='pad1'>
-        <h1><a href="../../index.html">All files</a> / <a href="index.html">template/meta</a> label.ts</h1>
+        <h1><a href="../../../index.html">All files</a> / <a href="index.html">template/spec/v0</a> job.ts</h1>
         <div class='clearfix'>
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Statements</span>
-                <span class='fraction'>33/33</span>
+                <span class='fraction'>45/45</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Branches</span>
-                <span class='fraction'>2/2</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Functions</span>
-                <span class='fraction'>2/2</span>
+                <span class='fraction'>0/0</span>
             </div>
         
             
             <div class='fl pad1y space-right2'>
                 <span class="strong">100% </span>
                 <span class="quiet">Lines</span>
-                <span class='fraction'>33/33</span>
+                <span class='fraction'>45/45</span>
             </div>
         
             
@@ -95,7 +95,19 @@
 <a name='L30'></a><a href='#L30'>30</a>
 <a name='L31'></a><a href='#L31'>31</a>
 <a name='L32'></a><a href='#L32'>32</a>
-<a name='L33'></a><a href='#L33'>33</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
+<a name='L33'></a><a href='#L33'>33</a>
+<a name='L34'></a><a href='#L34'>34</a>
+<a name='L35'></a><a href='#L35'>35</a>
+<a name='L36'></a><a href='#L36'>36</a>
+<a name='L37'></a><a href='#L37'>37</a>
+<a name='L38'></a><a href='#L38'>38</a>
+<a name='L39'></a><a href='#L39'>39</a>
+<a name='L40'></a><a href='#L40'>40</a>
+<a name='L41'></a><a href='#L41'>41</a>
+<a name='L42'></a><a href='#L42'>42</a>
+<a name='L43'></a><a href='#L43'>43</a>
+<a name='L44'></a><a href='#L44'>44</a>
+<a name='L45'></a><a href='#L45'>45</a></td><td class="line-coverage quiet"><span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
@@ -115,51 +127,75 @@
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">10x</span>
-<span class="cline-any cline-yes">10x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">2x</span>
-<span class="cline-any cline-yes">2x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
 <span class="cline-any cline-yes">1x</span>
-<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">&nbsp;
-interface LabelEntry
-    extends
-        Partial&lt;Record&lt;"id", string&gt;&gt;,
-        Partial&lt;Record&lt;'name', string&gt;&gt;,
-        Partial&lt;Record&lt;"description", string&gt;&gt;,
-        Partial&lt;Record&lt;"tags", string[]&gt;&gt;
-{
-    [key: string]: string | number | boolean | undefined | string[];
-}
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span>
+<span class="cline-any cline-yes">1x</span></td><td class="text"><pre class="prettyprint lang-js">import { CommandResultMetricsSpec, CommandResultSpec, CommandRunSpec } from "./command";
+import { ConfigSpec, ParameterSpec, PropertiesSpec } from "./config";
+&nbsp;
 &nbsp;
 &nbsp;
 /**
- * Labels are used to store metadata entries that are meant for selection or filtering.  Selecction or filtering can be done by the id  or a tag.
+ * Job Specification Template
+ * @summary A job is a collection of commands that are executed in a specific order.
+ * - Jobs can be retried on failure.
+ * - Jobs can be delayed.
+ * - Jobs can be timed out.
+ * - Jobs can span multiple processes.
  */
-class Labels
-    extends Map&lt;string, string | number | boolean | undefined | string[]&gt;
-{
+interface JobRunSpec
+    extends
+        ConfigSpec, // id, name, description, properties
+        Record&lt;"commands", CommandRunSpec[]&gt; {}
 &nbsp;
-    constructor(entries: LabelEntry = {}) {
-        super(Object.entries(entries));
-    }
 &nbsp;
-    public toJSON(): LabelEntry {
-        return Object.fromEntries(this);
-    }
-}
+/**
+ * Job Result Metrics Specification Template
+ * @summary A job result metrics is a collection of metrics that are collected during the execution of a job.
+ */
+interface JobResultMetricsSpec
+    extends
+        CommandResultMetricsSpec,
+        Record&lt;"status", string&gt; {}
+&nbsp;
+&nbsp;
+/**
+ * Job Result Specification Template
+ * @summary A job result is a collection of results that are returned from the execution of a job.
+ */
+interface JobResultSpec
+    extends
+        Record&lt;"job", JobRunSpec&gt;,
+        Record&lt;"output", CommandResultSpec&lt;any&gt;[]&gt;,
+        Record&lt;"metrics", JobResultMetricsSpec&gt; {}
 &nbsp;
 &nbsp;
 export {
-    type LabelEntry,
-    Labels,
-}</pre></td></tr></table></pre>
+    type JobRunSpec,
+    type JobResultSpec,
+    type JobResultMetricsSpec
+};</pre></td></tr></table></pre>
 
                 <div class='push'></div><!-- for sticky footer -->
             </div><!-- /wrapper -->
@@ -168,14 +204,14 @@ export {
                 <a href="https://istanbul.js.org/" target="_blank" rel="noopener noreferrer">istanbul</a>
                 at 2025-02-23T08:35:46.325Z
             </div>
-        <script src="../../prettify.js"></script>
+        <script src="../../../prettify.js"></script>
         <script>
             window.onload = function () {
                 prettyPrint();
             };
         </script>
-        <script src="../../sorter.js"></script>
-        <script src="../../block-navigation.js"></script>
+        <script src="../../../sorter.js"></script>
+        <script src="../../../block-navigation.js"></script>
     </body>
 </html>
     
